--- a/app/views/events/_scheduled_for_event.html.erb
+++ b/app/views/events/_scheduled_for_event.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @event.scheduled_people.each do |timecard| %>
+    <% @event.scheduled_timecards.each do |timecard| %>
       <tr>
         <td><%= link_to timecard.person.fullname, timecard %></td>
         <td><%= timecard.description %></td>
